# psx-pi-smbshare

./: README.md  automount-usb.sh  otg-setup.sh  provisionRelease.sh  samba-init.sh  setup.sh
usb_switcher/: Cargo.toml  usbswitcher.toml
